<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/marginVeryBig"
            card_view:cardBackgroundColor="@color/cardBackground"
            card_view:cardCornerRadius="@dimen/cardCornerRadius"
            card_view:contentPadding="@dimen/padding"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/profileSettings"
                    android:textSize="@dimen/profileTitleTextSize"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/userNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSmall"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:drawableTint="@color/imageTint"
                    android:hint="@string/userNameHint"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSmall"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:drawableTint="@color/imageTint"
                    android:focusable="false"
                    android:inputType="none"
                    />

                <EditText
                    android:id="@+id/nickNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSmall"
                    android:drawableLeft="@drawable/ic_people_black_24dp"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:drawableTint="@color/imageTint"
                    android:hint="@string/nickNameHint"
                    android:inputType="text"
                    />

                <brains.mock.firebasetest.ui.view.maskededittext.MaskedEditText
                    android:id="@+id/phoneNumberField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSmall"
                    android:drawableLeft="@drawable/ic_settings_phone_black_24dp"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:drawableTint="@color/imageTint"
                    android:inputType="phone"
                    app:allowed_chars="1234567890"
                    app:mask="+38 (###) ### - ## - ##"
                    />

                <EditText
                    android:id="@+id/birthDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSmall"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_today_black_24dp"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:drawableTint="@color/imageTint"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/birthDateHint"
                    />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save"
                    />

                <Button
                    android:id="@+id/logOutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/logOut"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>
